--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <header class="header-top">
   <div class="logo">
     <a href="index.html">
-      <img src="/assets/logo_gp-2724c50f.jpg" alt="Logo Rap Nation">
+      <img src="assets/logo_gp-2724c50f.jpg" alt="Logo">
     </a>
   </div>
   <nav class="nav-links">
@@ -21,20 +21,9 @@
     <a href="artists.html" class="nav-link">Artistas</a>
   </nav>
   <button class="user-btn">
-    <img src="data:image/png;base64,..." alt="User Icon" class="user-icon"> Usuario
+    <img src="assets/icons/avatar.png" alt="User Icon" class="user-icon"> Usuario
   </button>
 </header>
-
-<!-- Carrusel -->
-<div class="carousel-container">
-  <div class="carousel-slide">
-    <img src="src/assets/img/imagen1.jpg" class="carousel-image" alt="Imagen 1">
-    <img src="src/assets/img/imagen2.jpg" class="carousel-image" alt="Imagen 2">
-    <img src="src/assets/img/imagen3.jpg" class="carousel-image" alt="Imagen 3">
-  </div>
-  <button class="arrow arrow-left" id="prevBtn">&#10094;</button>
-  <button class="arrow arrow-right" id="nextBtn">&#10095;</button>
-</div>
 
   
       
