--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Proyecto</title>
-    <script src="carrusel.js"></script>
     <link rel="stylesheet" href="styles/main.scss">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -13,7 +12,7 @@
 <header class="header-top">
   <div class="logo">
     <a href="index.html">
-      <img src="assets/logo_gp-2724c50f.jpg" alt="Logo">
+      <img src="assets/logo_gp.jpg" alt="Logo">
     </a>
   </div>
   <nav class="nav-links">
@@ -21,7 +20,7 @@
     <a href="artists.html" class="nav-link">Artistas</a>
   </nav>
   <button class="user-btn">
-    <img src="assets/icons/avatar.png" alt="User Icon" class="user-icon"> Usuario
+    <img src="assets/avatar.png" alt="User Icon" class="user-icon"> Usuario
   </button>
 </header>
 
