--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Proyecto</title>
-    <link rel="stylesheet" href="styles/main.scss">
+    <link rel="stylesheet" href="/styles/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- header.html o index.html (dependiendo de tu estructura) -->
+  <script type="module" src="/main.js"></script>
 <header class="header-top">
   <div class="logo">
     <a href="index.html">
