commit hasta la polla

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
   
     <!-- Importar el archivo SCSS principal -->
-    <link rel="stylesheet" href="/src/styles/layout/main.scss">
+    <link rel="stylesheet" href="/src/styles/layout/main.scss" />
+
   
     <!-- Otros archivos SCSS específicos -->
     <link rel="stylesheet" href="/src/styles/layout/header.scss">
@@ -107,9 +108,9 @@
         </ul>
       </div>
       <div class="social-media">
-        <a href="#"><img src="/src/assets/fb.png" alt="Facebook"></a>
-        <a href="#"><img src="/src/assets/ig.png" alt="Instagram"></a>
-        <a href="#"><img src="/src/assets/gmail.png" alt="Gmail"></a>
+        <a href="#"><img src="/src/assets/icons/fb.png" alt="Facebook"></a>
+        <a href="#"><img src="/src/assets/icons/ig.png" alt="Instagram"></a>
+        <a href="#"><img src="/src/assets/icons/gmail.png" alt="Gmail"></a>
       </div>
     </div>
   </footer>
